[package]
name = "spl-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = "3.2.25"
solana-clap-utils = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-cli-config = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-client  = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-logger  = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
spl-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
