[package]
name = "spl-math"
version = "0.1.0"
description = "Solana Program Library Math"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.3.0"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
solana-program = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
proptest = "1.0.0"
solana-program-test = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
libm = "0.2.2"

[lib]
crate-type = ["cdylib", "lib"]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
