[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.7.0"

[dependencies]
borsh = "0.9"
clap = "3.2.25"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
solana-account-decoder = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-clap-utils = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-cli-config = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-cli-output = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" , optional = true}
solana-client  = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-logger  = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-program  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-remote-wallet  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
spl-associated-token-account = { version = "=1.1.3", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "=0.7.0", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "=3.5.0", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
