[package]
name = "spl-stake-pool"
version = "0.7.0"
description = "Solana Program Library Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9"
# mpl-token-metadata =  { version = "1.7.0", features = [ "no-entrypoint" ] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.9"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.6", path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-vote-program = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
test-case = "2.2"

[lib]
crate-type = ["cdylib", "lib"]
