[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Token Lending CLI"
edition = "2021"
homepage = "https://spl.solana.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = "3.2.25"
solana-clap-utils = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-cli-config = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-client  = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-logger  = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-program  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
spl-token-lending = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.5", path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
