[package]
name = "spl-example-custom-heap"
version = "1.0.0"
description = "Solana Program Library Custom Heap Example"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }

[dev-dependencies]
solana-program-test = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
