[package]
name = "spl-example-logging"
version = "1.0.0"
description = "Solana Program Library Logging Example"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }

[dev-dependencies]
solana-program-test = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk  = {git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
